[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/PopupMenus/PauseMenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/PopupMenus/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://UI/GuardedButton.gd" type="Script" id=3]
[ext_resource path="res://Gfx/UITheme.tres" type="Theme" id=4]

[sub_resource type="GDScript" id=1]
script/source = "extends Button

func _ready():
	update_text()

func update_text():
	text = \"DEBUG: %s GOD MODE\" % (\"ENABLE\" if not Globals.god_mode else \"DISABLE\")

func _on_pressed():
	Globals.god_mode = not Globals.god_mode
	update_text()
"

[node name="PauseMenu" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -160.0
margin_right = 110.0
margin_bottom = 160.0
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" parent="." instance=ExtResource( 1 )]
text = "RESUME"

[node name="NewGameButton" parent="." instance=ExtResource( 1 )]
margin_top = 65.0
margin_bottom = 110.0
text = "NEW GAME"
script = ExtResource( 3 )

[node name="OptionsButton" parent="." instance=ExtResource( 1 )]
margin_top = 120.0
margin_bottom = 110.0
text = "OPTIONS"

[node name="QuitButton" parent="." instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -60.0
margin_bottom = -10.0
text = "QUIT TO DESKTOP"

[node name="ToggleGodModeButton" parent="." instance=ExtResource( 1 )]
margin_top = 175.0
margin_bottom = 220.0
text = "DEBUG: ENABLE GOD MODE"
script = SubResource( 1 )

[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed" flags=6]
[connection signal="second_pressed" from="NewGameButton" to="." method="_on_NewGameButton_second_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed" flags=6]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed" flags=6]
[connection signal="pressed" from="ToggleGodModeButton" to="ToggleGodModeButton" method="_on_pressed"]
